# Sanic-Pra

./: .gitignore  README.md  requirements.txt
SanicApiPra/: main.py
SanicApiPra/tests/: test_api.py
SanicPra/: main.py
SanicPra/tests/: test_sample.py
api_sanic/: Dockerfile  docker-compose.yaml  main.py  models.py  pyproject.toml
api_sanic/api/: __init__.py  add_todo.py  app.py  delete_todo.py  get_todo.py
api_sanic/api_sanic/: main.py  migrate.py  models.py
api_sanic/api_sanic/api/: __init__.py  add_tag.py  add_todo.py  app.py  connect_todo.py  delete_todo.py  delete_user.py  get_table.py  get_todo.py  hello_world.py  tag.py  todo.py  user.py
api_sanic/api_sanic/api/old_endpoints/: add_tag.py  add_todo.py  add_user.py  delete_tag.py  delete_todo.py  get_todo.py  update_tag.py  update_todo.py  update_user.py
api_sanic/tests/: __init__.py  conftest.py  test_api_sanic.py  test_delete_todo.py  test_get_alltodos.py  test_get_todo.py  test_helloworld.py
dockerfiles/db/: docker-compose.yaml
dockerfiles/test_db/: docker-compose.yaml
