[tool.poetry]
name = "api_sanic"
version = "0.1.0"
description = ""
authors = ["yoCkawa0 <18nc047@ms.dendai.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
sanic="21.9.1"
peewee="3.14.4"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

